# discord-rpc-client.rs

./: Cargo.toml
examples/: discord_presence.rs  discord_presence_subscribe.rs
src/: client.rs  error.rs  lib.rs  macros.rs
src/connection/: base.rs  manager.rs  mod.rs  unix.rs  windows.rs
src/models/: commands.rs  events.rs  message.rs  mod.rs  payload.rs  rich_presence.rs  shared.rs
