[package]
authors     = ["Patrick Auernig <dev.patrick.auernig@gmail.com>"]
name        = "discord-rpc-client"
description = "A Rust client for Discord RPC."
keywords    = ["discord", "rpc", "ipc"]
license     = "MIT"
readme      = "README.md"
repository  = "https://gitlab.com/valeth/discord-rpc-client.rs.git"
version     = "0.3.0"

[badges]
travis-ci   = { repository = "valeth/discord-rpc-client.rs" }
appveyor    = { repository = "valeth/discord-rpc-client.rs", service = "gitlab" }
maintenance = { status = "experimental" }

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
byteorder    = "1.4"
log          = "0.4"
bytes        = "^1"

[target.'cfg(windows)'.dependencies]
named_pipe   = "0.3.0"

[dependencies.uuid]
version  = "0.8"
features = ["v4"]

[dev-dependencies]
simplelog = "~0.5"

[features]
default = ["rich_presence"]
rich_presence = []
